--- a/1.11/api/package-manager.yaml
+++ b/1.11/api/package-manager.yaml
@@ -3171,7 +3171,7 @@ paths:
                         "versions": {
                           "type": "object",
                           "patternProperties": {
-                            ".{1,}": { "type": "string" }
+                            ".{1,}": { "type": "number" }
                           },
                           "additionalProperties": true
                         }
@@ -3196,8 +3196,8 @@ paths:
                 - name: cassandra
                   currentVersion: 1.0.24-3.0.10
                   versions:
-                    1.0.24-3.0.10: '24'
-                    1.0.23-3.0.10: '23'
+                    1.0.24-3.0.10: 24
+                    1.0.23-3.0.10: 23
                   description: Apache Cassandra
                   framework: true
                   tags:
